--- a/style.css
+++ b/style.css
@@ -43,3 +43,16 @@ a:hover {
     box-shadow: 2 px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
+/*media query*/
+@media (max-whidth: 600px) {
+    container{
+        flex-direction: column;
+        align-items: center;
+    }
+
+
+#card {
+    width: 80%;
+    }
+
+}
